# ethercat-control

./: README.md  drive_demo.py  pyproject.toml  setup.json
ethercat_control/: __init__.py  config.py  controller.py  esi.py  setup.sample.json  setup_generator.py
ethercat_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basic_move.py  find_adapters.py  print slaves.py  pysoem_cia402_demo.py  test.py
pysoem-master/examples/: find_adapters.py
